fix: hide edit action when nothing is selected
For settings UI when list is empty, this hide edit action
that user can't edit when there is nothing to edit

close #16

--- a/app/views/zones/_partials/action_bar.html
+++ b/app/views/zones/_partials/action_bar.html
@@ -11,7 +11,7 @@
       </span>
     </a>
   </li>
-  <li ng-if="!edit" class="nav-item">
+  <li ng-if="!edit " class="nav-item">
     <a
       ng-click="onNew()"
       class="nav-link text-muted"
@@ -22,7 +22,7 @@
       </span>
     </a>
   </li>
-  <li ng-if="!edit" class="nav-item b-l p-l p-r">
+  <li ng-if="!edit && zone._id" class="nav-item b-l p-l p-r">
     <a
       ng-click="onEdit()"
       class="nav-link text-muted no-border"
