refactor: migrate overview reports to v1
close #50

--- a/app/views/dashboards/overviews/_partials/services_summary.html
+++ b/app/views/dashboards/overviews/_partials/services_summary.html
@@ -116,7 +116,7 @@
             <tbody>
               <tr ng-repeat="service in overviews.services">
                 <td title="{{service.name}}">
-                  {{service.name}}
+                  {{service.name.en}}
                 </td>
                 <td title="{{service.count | number:0}}">
                   {{service.count | number:0}}
