--- a/app/views/dashboards/performance/index.html
+++ b/app/views/dashboards/performance/index.html
@@ -57,7 +57,7 @@
         <!-- end area service pipeline -->
       </div>
     </div>
-    <!-- start overal and pipeline summary -->
+    <!-- start overall and pipeline summary -->
 
     <!-- start service groups summary -->
     <ng-include
