fix: move border to the left side of the pie chart

--- a/app/views/dashboards/overviews/_partials/service_types_summary.html
+++ b/app/views/dashboards/overviews/_partials/service_types_summary.html
@@ -60,7 +60,7 @@
     <div>
       <div class="row-col">
         <!-- start visual stats -->
-        <div class="col-sm-5 b-l lt">
+        <div class="col-sm-5 b-r lt">
           <div class="p-a-md">
             <echart
               config="perServiceTypeConfig"
