--- a/app/views/dashboards/exports.html
+++ b/app/views/dashboards/exports.html
@@ -58,15 +58,16 @@
           </div>
         </div>
         <div class="col-md-3" ng-repeat="jurisdiction in jurisdictions">
-          <div class="checkbox-custom checkbox-primary p-a p-b-none">
-            <input
-              type="checkbox"
-              checklist-model="filters.jurisdictions"
-              checklist-value="jurisdiction._id"
-            />
-            <label class="text-muted" title="{{jurisdiction.name}}"
-              >{{jurisdiction.name}}</label
-            >
+          <div class=" p-a p-b-none">
+            <label class="md-check text-muted" title="{{ jurisdiction.name }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.jurisdictions"
+                checklist-value="jurisdiction._id"
+              />
+              <i class="blue"> </i>
+              {{ jurisdiction.name }}
+            </label>
           </div>
         </div>
       </div>
@@ -81,20 +82,47 @@
           </div>
         </div>
         <div class="col-md-3" ng-repeat="servicegroup in servicegroups">
-          <div class="checkbox-custom checkbox-primary p-a p-b-none">
-            <input
-              type="checkbox"
-              checklist-model="filters.servicegroups"
-              checklist-value="servicegroup._id"
-              checklist-change="filterServices()"
-            />
-            <label class="text-muted" title="{{servicegroup.name}}"
-              >{{servicegroup.name}}</label
-            >
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ servicegroup.name }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.servicegroups"
+                checklist-value="servicegroup._id"
+                checklist-change="filterServices()"
+              />
+              <i class="blue"></i>
+              {{ servicegroup.name }}
+            </label>
           </div>
         </div>
       </div>
       <!-- end servicegroup filters -->
+      <!-- start service type filters -->
+      <div class="row m-t-md">
+        <div class="col-md-12">
+          <div class="p-a p-l-none">
+            <h6 class="m-a-0">
+              Service Type
+            </h6>
+          </div>
+        </div>
+        <div
+          class="col-md-3"
+          ng-repeat="type in servicetypes | orderBy:'name.en'"
+        >
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ type.name.en }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.servicetypes"
+                checklist-value="type._id"
+              />
+              <i class="blue"></i>{{ type.name.en }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <!-- end service type filters -->
       <!-- start service filters -->
       <div class="row m-t-md">
         <div class="col-md-12">
@@ -105,14 +133,15 @@
           </div>
         </div>
         <div class="col-md-3" ng-repeat="service in services">
-          <div class="checkbox-custom checkbox-primary p-a p-b-none">
-            <input
-              type="checkbox"
-              checklist-model="filters.services"
-              checklist-value="service._id"
-            />
-            <label class="text-muted" title="{{service.name}}"
-              >{{service.name}}</label
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ service.name }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.services"
+                checklist-value="service._id"
+              />
+              <i class="blue"></i>
+              {{ service.name }}</label
             >
           </div>
         </div>
@@ -128,15 +157,15 @@
           </div>
         </div>
         <div class="col-md-2" ng-repeat="status in statuses">
-          <div class="checkbox-custom checkbox-primary p-a">
-            <input
-              type="checkbox"
-              checklist-model="filters.statuses"
-              checklist-value="status._id"
-            />
-            <label class="text-muted" title="{{status.name}}"
-              >{{status.name}}</label
-            >
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ status.name }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.statuses"
+                checklist-value="status._id"
+              />
+              <i class="blue"></i>{{ status.name }}
+            </label>
           </div>
         </div>
       </div>
@@ -151,15 +180,15 @@
           </div>
         </div>
         <div class="col-md-2" ng-repeat="priority in priorities">
-          <div class="checkbox-custom checkbox-primary p-a">
-            <input
-              type="checkbox"
-              checklist-model="filters.priorities"
-              checklist-value="priority._id"
-            />
-            <label class="text-muted" title="{{priority.name}}"
-              >{{priority.name}}</label
-            >
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ priority.name }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.priorities"
+                checklist-value="priority._id"
+              />
+              <i class="blue"></i>{{ priority.name }}
+            </label>
           </div>
         </div>
       </div>
@@ -174,19 +203,42 @@
           </div>
         </div>
         <div class="col-md-2" ng-repeat="workspace in workspaces">
-          <div class="checkbox-custom checkbox-primary p-a">
-            <input
-              type="checkbox"
-              checklist-model="filters.workspaces"
-              checklist-value="workspace"
-            />
-            <label class="text-muted" title="{{workspace}}"
-              >{{workspace}}</label
-            >
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ workspace }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.workspaces"
+                checklist-value="workspace"
+              />
+              <i class="blue"></i>{{ workspace }}
+            </label>
           </div>
         </div>
       </div>
       <!-- end workspace filters -->
+      <!-- start reporting method filters -->
+      <div class="row m-t-md">
+        <div class="col-md-12">
+          <div class="p-a p-l-none">
+            <h6 class="m-a-0">
+              Reporting Method
+            </h6>
+          </div>
+        </div>
+        <div class="col-md-3" ng-repeat="method in methods">
+          <div class="p-a p-b-none">
+            <label class="md-check text-muted" title="{{ method }}">
+              <input
+                type="checkbox"
+                checklist-model="filters.methods"
+                checklist-value="method"
+              />
+              <i class="blue"></i>{{ method }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <!-- end reporting method filters -->
       <!-- start export actions -->
       <div class="row m-t-md m-b-lg">
         <div class="col-md-12">
