feat: (wip) link overview learderboard with operator profile
Once this feature is done will allow navigation from overview
operators leaderboard to operator profile

--- a/app/views/dashboards/overviews/_partials/operators_leaderboard.html
+++ b/app/views/dashboards/overviews/_partials/operators_leaderboard.html
@@ -18,6 +18,7 @@
         <ul class="list inset m-a-0">
           <li
             ng-if="operator.name"
+            ui-sref="app.profile({id: operator._id})"
             ng-repeat="operator in overviews.operators"
             class="list-item"
           >
