--- a/app/views/auth/_partials/overall_summary.html
+++ b/app/views/auth/_partials/overall_summary.html
@@ -9,29 +9,6 @@
     </div>
     <!-- end header -->
 
-    <!-- start toolbox -->
-    <div class="box-tool">
-      <!-- start time filters -->
-      <ul class="nav">
-        <!-- start export -->
-        <li class="nav-item inline">
-          <a
-            title="Click To Export"
-            class="btn btn-xs rounded white"
-            aria-expanded="false"
-            ng-csv="export('services')"
-            csv-header="exports.services.headers"
-            filename="services_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv"
-          >
-            Export
-          </a>
-        </li>
-        <!-- end export -->
-      </ul>
-      <!-- end time filters -->
-    </div>
-    <!-- end toolbox -->
-
     <!-- start body -->
     <div>
       <!-- start overall stats -->
@@ -39,15 +16,12 @@
       <!-- start operator overall performance summary -->
       <div class="row no-gutter">
         <!-- start total -->
-        <div
-          class="col-xs-6 col-sm-3 b-r b-b"
-          title="Total Service Requests Received"
-        >
-          <div class="p-a-sm">
+        <div class="col-xs-6 col-sm-2 b-r b-b" title="Total Service Requests">
+          <div class="padding">
             <div class="text-center">
-              <h4 class="text-center _600 m-t-md">
-                {{performances.overall.count | number:0}}
-              </h4>
+              <h2 class="text-center _600 m-t-md">
+                {{ performances.overall.count | number: 0 }}
+              </h2>
               <p class="text-muted m-b-md">Total</p>
             </div>
           </div>
@@ -56,15 +30,11 @@
 
         <!-- start pending -->
         <div class="col-xs-6 col-sm-2 b-r b-b" title="Pending Service Requests">
-          <div class="p-a-sm">
-            <!-- <div>
-              <span class="pull-right text-xs"
-                ng-class="performances.overall.percentagePending <= 50 ? 'text-success' : 'text-danger'">{{performances.overall.percentagePending | number:2}}%</span>
-            </div> -->
+          <div class="padding">
             <div class="text-center">
-              <h4 class="text-center _600 m-t-md">
-                {{performances.overall.pending | number:0}}
-              </h4>
+              <h2 class="text-center _600 m-t-md">
+                {{ performances.overall.pending | number: 0 }}
+              </h2>
               <p class="text-muted m-b-md">Pending</p>
             </div>
           </div>
@@ -76,15 +46,11 @@
           class="col-xs-6 col-sm-2 b-r b-b"
           title="Resolved Service Requests"
         >
-          <div class="p-a-sm">
-            <!-- <div>
-              <span class="pull-right text-xs"
-                ng-class="performances.overall.percentageResolved >= 50 ? 'text-success' : 'text-danger'">{{performances.overall.percentageResolved | number:2}}%</span>
-            </div> -->
+          <div class="padding">
             <div class="text-center">
-              <h4 class="text-center _600 m-t-md">
-                {{performances.overall.resolved | number:0}}
-              </h4>
+              <h2 class="text-center _600 m-t-md">
+                {{ performances.overall.resolved | number: 0 }}
+              </h2>
               <p class="text-muted m-b-md">Resolved</p>
             </div>
           </div>
@@ -96,33 +62,64 @@
           class="col-xs-6 col-sm-2 b-r b-b"
           title="Late(Past SLA Time) Service Requests"
         >
-          <div class="p-a-sm">
-            <!-- <div>
-              <span class="pull-right text-xs"
-                ng-class="performances.overall.percentageLate > 0 ? 'text-danger' : 'text-success'">{{performances.overall.percentageLate | number:2}}%</span>
-            </div> -->
+          <div class="padding">
             <div class="text-center">
-              <h4 class="text-center _600 m-t-md">
-                {{performances.overall.late | number:0}}
-              </h4>
+              <h2 class="text-center _600 m-t-md">
+                {{ performances.overall.late | number: 0 }}
+              </h2>
               <p class="text-muted m-b-md">Late</p>
             </div>
           </div>
         </div>
         <!-- end late  -->
 
-        <!-- start escalated -->
-        <div class="col-xs-6 col-sm-3 b-b" title="Overall Target to be reached">
-          <div class="p-a-sm">
+        <!-- start average attend time -->
+        <div
+          class="col-xs-6 col-sm-2 b-r b-b"
+          title="Average Attend Time(Call Duration)"
+        >
+          <div class="padding">
             <div class="text-center">
-              <h4 class="text-center _600 m-t-md">
-                {{performances.overall.target | number:0}}
-              </h4>
-              <p class="text-muted m-b-md">Target</p>
+              <h2 class="text-center _600 m-t-md">
+                <span
+                  title="Average Attend Time(Call Duration) - Minutes Spent"
+                >
+                  {{ performances.overall.averageAttendTime.minutes }}
+                  <span class="text-muted text-xs">mins</span>
+                </span>
+                <span
+                  title="Average Attend Time(Call Duration) - Seconds Spent"
+                >
+                  {{ performances.overall.averageAttendTime.seconds }}
+                  <span class="text-muted text-xs">secs</span>
+                </span>
+              </h2>
+              <p class="text-muted m-b-md">Average Attend Time</p>
             </div>
           </div>
         </div>
-        <!-- end escalated  -->
+        <!-- end average attend time -->
+
+        <!-- start average resolve time -->
+        <div class="col-xs-6 col-sm-2 b-b" title="Average resolve Time">
+          <div class="padding">
+            <div class="text-center">
+              <h2 class="text-center _600 m-t-md">
+                <span title="Average resolve Time - Hourss Spent">
+                  {{ performances.overall.averageResolveTime.hours +
+                  performances.overall.averageResolveTime.days * 24 }}
+                  <span class="text-muted text-xs">hrs</span>
+                </span>
+                <span title="Average resolve Time - Minutes Spent">
+                  {{ performances.overall.averageResolveTime.minutes }}
+                  <span class="text-muted text-xs">mins</span>
+                </span>
+              </h2>
+              <p class="text-muted m-b-md">Average Resolve Time</p>
+            </div>
+          </div>
+        </div>
+        <!-- end average resolve time -->
       </div>
       <!-- end operator overall performance summary -->
       <!-- end overall stats -->
