feat: allow in-app email sending of issue

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -14,8 +14,7 @@
   </li>
   <li ng-if="servicerequest.operator" class="nav-item">
     <a
-      ng-if="mailTo"
-      href="{{ mailTo }}"
+      ng-click="onSend()"
       class="nav-link text-muted"
       title="Click to Send Issue to Area"
     >
