feat: allow se default jurisdiction, priority, group, service & status

--- a/app/views/services/_partials/detail.html
+++ b/app/views/services/_partials/detail.html
@@ -250,6 +250,18 @@
                     </div>
                   </div>
                 </div>
+                <div class="m-t-md" title="Is Default">
+                  <div class="form-group">
+                    <div class="checkbox-custom checkbox-primary">
+                      <input
+                        ng-show="edit"
+                        type="checkbox"
+                        ng-model="service.default"
+                      />
+                      <label title="Is Default">Is Default</label>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </form>
