--- a/app/views/priorities/_partials/detail.html
+++ b/app/views/priorities/_partials/detail.html
@@ -86,6 +86,18 @@
                     </div>
                   </div>
                 </div>
+                <div class="m-t-lg" title="Is Default">
+                  <div class="form-group">
+                    <div class="checkbox-custom checkbox-primary">
+                      <input
+                        ng-show="edit"
+                        type="checkbox"
+                        ng-model="priority.default"
+                      />
+                      <label title="Is Default">Is Default</label>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </form>
